[metadata]
name = secretbox
version = 2.2.0
description = A library that offers a simple method of loading and accessing environmental variables and `.env` file values.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preocts/secretbox
author = Preocts
author_email = preocts@preocts.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
aws =
    boto3>=1.18.56
    boto3-stubs[secretsmanager]>=1.18.55
tests =
    moto[secretsmanager]>=2.2.8

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
branch = True
source_pkgs = secretbox
source = tests

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImlementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml

[flake8]
ignore = W503,E203
max-line-length = 88
